# xugrid

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .zenodo.json  A.txt  LICENSE  MANIFEST.in  README.md  README.rst  api.html  changelog.html  dev_docs.html  environment.yml  genindex.html  grid_a.idf  grid_b.idf  index.html  linear_result.idf  objects.inv  overlap_result.idf  pixi.toml  py-modindex.html  pyproject.toml  rhs.txt  ruff.toml  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  terminology.html  testy.py  tox.ini  user_guide.html
.doctrees/: api.doctree  changelog.doctree  dev_docs.doctree  environment.pickle  index.doctree  sg_execution_times.doctree  terminology.doctree  user_guide.doctree
.doctrees/api/: xugrid.BarycentricInterpolator.doctree  xugrid.CentroidLocatorRegridder.doctree  xugrid.NetworkGridder.doctree  xugrid.OverlapRegridder.doctree  xugrid.RelativeOverlapRegridder.doctree  xugrid.Ugrid1d.assign_edge_coords.doctree  xugrid.Ugrid1d.assign_node_coords.doctree  xugrid.Ugrid1d.attrs.doctree  xugrid.Ugrid1d.bounds.doctree  xugrid.Ugrid1d.celltree.doctree  xugrid.Ugrid1d.contract_vertices.doctree  xugrid.Ugrid1d.coords.doctree  xugrid.Ugrid1d.copy.doctree  xugrid.Ugrid1d.create_data_array.doctree  xugrid.Ugrid1d.dimensions.doctree  xugrid.Ugrid1d.dims.doctree  xugrid.Ugrid1d.directed_edge_edge_connectivity.doctree  xugrid.Ugrid1d.directed_node_node_connectivity.doctree  xugrid.Ugrid1d.doctree  xugrid.Ugrid1d.edge_bounds.doctree  xugrid.Ugrid1d.edge_coordinates.doctree  xugrid.Ugrid1d.edge_dimension.doctree  xugrid.Ugrid1d.edge_edge_connectivity.doctree  xugrid.Ugrid1d.edge_kdtree.doctree  xugrid.Ugrid1d.edge_length.doctree  xugrid.Ugrid1d.edge_x.doctree  xugrid.Ugrid1d.edge_y.doctree  xugrid.Ugrid1d.fill_value.doctree  xugrid.Ugrid1d.format_connectivity_as_dense.doctree  xugrid.Ugrid1d.format_connectivity_as_sparse.doctree  xugrid.Ugrid1d.from_dataset.doctree  xugrid.Ugrid1d.from_geodataframe.doctree  xugrid.Ugrid1d.from_meshkernel.doctree  xugrid.Ugrid1d.from_shapely.doctree  xugrid.Ugrid1d.get_connectivity_matrix.doctree  xugrid.Ugrid1d.get_coordinates.doctree  xugrid.Ugrid1d.intersect_edges.doctree  xugrid.Ugrid1d.intersect_line.doctree  xugrid.Ugrid1d.intersect_linestring.doctree  xugrid.Ugrid1d.is_cyclic.doctree  (+249 more)
.doctrees/examples/: connectivity.doctree  hydamo_network.doctree  index.doctree  network_gridder.doctree  overlap_regridder.doctree  partitioning.doctree  plotting.doctree  quick_overview.doctree  (+4 more)
.doctrees/examples-dev/: index.doctree  sg_execution_times.doctree  voronoi.doctree
_modules/: index.html
_sources/: api.rst.txt  changelog.rst.txt  dev_docs.rst.txt  index.rst.txt  sg_execution_times.rst.txt  terminology.rst.txt  user_guide.rst.txt
_static/: documentation_options.js  theme-deltares.css
api/: xugrid.BarycentricInterpolator.html  xugrid.CentroidLocatorRegridder.html  xugrid.NetworkGridder.html  xugrid.OverlapRegridder.html  xugrid.RelativeOverlapRegridder.html  xugrid.Ugrid1d.assign_edge_coords.html  xugrid.Ugrid1d.assign_node_coords.html  xugrid.Ugrid1d.attrs.html  xugrid.Ugrid1d.bounds.html  xugrid.Ugrid1d.celltree.html  xugrid.Ugrid1d.contract_vertices.html  xugrid.Ugrid1d.coords.html  xugrid.Ugrid1d.copy.html  xugrid.Ugrid1d.create_data_array.html  xugrid.Ugrid1d.dimensions.html  xugrid.Ugrid1d.dims.html  xugrid.Ugrid1d.directed_edge_edge_connectivity.html  xugrid.Ugrid1d.directed_node_node_connectivity.html  xugrid.Ugrid1d.edge_bounds.html  xugrid.Ugrid1d.edge_coordinates.html  xugrid.Ugrid1d.edge_dimension.html  xugrid.Ugrid1d.edge_edge_connectivity.html  xugrid.Ugrid1d.edge_kdtree.html  xugrid.Ugrid1d.edge_length.html  xugrid.Ugrid1d.edge_x.html  xugrid.Ugrid1d.edge_y.html  xugrid.Ugrid1d.fill_value.html  xugrid.Ugrid1d.format_connectivity_as_dense.html  xugrid.Ugrid1d.format_connectivity_as_sparse.html  xugrid.Ugrid1d.from_dataset.html  xugrid.Ugrid1d.from_geodataframe.html  xugrid.Ugrid1d.from_meshkernel.html  xugrid.Ugrid1d.from_shapely.html  xugrid.Ugrid1d.get_connectivity_matrix.html  xugrid.Ugrid1d.get_coordinates.html  xugrid.Ugrid1d.html  xugrid.Ugrid1d.intersect_edges.html  xugrid.Ugrid1d.intersect_line.html  xugrid.Ugrid1d.intersect_linestring.html  xugrid.Ugrid1d.is_cyclic.html  (+275 more)
data/: ADH_SanDiego.nc  README.md  elevation_nl.nc  hydamo_objects.csv  hydamo_points.csv  hydamo_profiles.csv  provinces-nl.geojson  xoxo_triangles.txt  xoxo_vertices.txt
docs/: Makefile  api.rst  changelog.rst  clean.py  conf.py  index.rst  issues.rst  make.bat  user_guide.rst
examples/: README.rst  connectivity.html  connectivity.py  hydamo_network.html  hydamo_network.py  index.html  interpolate_nl.py  network_gridder.html  network_gridder.py  overlap_regridder.html  overlap_regridder.py  partitioning.html  partitioning.py  plotting.html  plotting.py  quick_overview.html  quick_overview.py  refine_ugrid1d.py  regrid_dataset.py  regridder_overview.html  regridder_overview.py  selection.html  selection.py  sg_execution_times.html  tmp.py  vector_conversion.html  vector_conversion.py
examples-dev/: README.rst  index.html  sg_execution_times.html  voronoi.html  voronoi.py
sample_data/: adh_san_diego.html  disk.html  elevation_nl.html  index.html  network.html  provinces_nl.html  sg_execution_times.html  xoxo.html
tests/: __init__.py  conftest.py  create_test_datasets.py  test_burn.py  test_connectivity.py  test_conventions.py  test_conversion.py  test_core_utils.py  test_crs.py  test_data.py  test_examples.py  test_interpolate.py  test_meshkernel_utils.py  test_partitioning.py  test_plot.py  test_plot_utils.py  test_polygonize.py  test_regrid.py  test_regridder_domain_testing_structured.py  test_snap.py  test_sparse.py  test_ugrid.py  test_ugrid1d.py  test_ugrid2d.py  test_ugrid_dataset.py  test_ugrid_io.py  test_voronoi.py  ugrid_tests.py
xugrid/: __init__.py  accessor.py  align.py  connectivity.py  constants.py  conversion.py  interpolate.py  meshkernel_utils.py  ops.py  plot.py  snapping.py  testing.py  typing.py  ugrid.py  ugridDataset.py  ugrid_dataset.py  ugrid_io.py  voronoi.py  wrap.py
(+493 files in other folders)
