[metadata]
name = xugrid
version = 0.1.7
author = Huite Bootsma
author_email = huite.bootsma@deltares.nl
description = Xarray extension for unstructured grids
url = https://github.com/deltares/xugrid
project_urls =
    Code=https://github.com/deltares/xugrid
    Issues=https://github.com/deltares/xugrid/issues
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
keywords = 
    mesh
    ugrid
    unstructured grid
    xarray

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    pandas
    numba
    numba_celltree
    numpy
    pooch
    scipy
    xarray

[options.extras_require]
all =
    geopandas
    matplotlib
    meshkernel
    netcdf4
    pooch
    pygeos
    pyproj
    zarr

docs = 
    %(all)s
    pydata-sphinx-theme
    sphinx
    sphinx-gallery

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203,
    # module level import not at top of file
    E402,
    # line too long - let black worry about that
    E501,
    # line break before binary operator
    W503,
per-file-ignores = 
    __init__.py:F401
    ./docs/conf.py:F401